--- a/content/data/config.json
+++ b/content/data/config.json
@@ -153,7 +153,7 @@
                 "type": "Link",
                 "label": "Szálláshely-minősítés segédlet",
                 "altText": "Szálláshely-minősítés segédlet",
-                "url": "/",
+                "url": "/szallashely-minosites-ebook",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
